<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_welcome_title"
        android:textColor="@color/colorWhite"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/setup_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_welcome_subtitle"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/setup_card_container_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">

    </LinearLayout>


    <Button
        android:id="@+id/setup_restart_button"
        style="?android:textAppearanceSmall"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setup_restart_setup"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textColor="@color/colorWhite"/>

</LinearLayout>
